infra/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellocluster
  namespace: hellocluster
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hellocluster
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hellocluster
    spec:
      containers:
        - name: hellocluster
          image: ghcr.io/phish3y/hellocluster:e4d1fa1a353423d6554fb91ca072b071c49ae613
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
              scheme: HTTP
