infra/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hellcluster-api
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: hellcluster-api
